# pickleball_scraper

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
app/: __init__.py  availability_service.py  config.py  db.py  main.py  models.py  notifier.py  rec_client.py  schemas.py
app/static/: app.js  styles.css
app/templates/: app.js  index.html
tests/: conftest.py
tests/e2e/: conftest.py  test_dashboard.py
tests/unit/: test_api.py  test_availability_service.py  test_notifier.py  test_rec_client.py
