[project]
name = "pickleball-scraper"
version = "0.1.0"
description = "FastAPI dashboard and scraper for pickleball court availability."
authors = [
    {name = "Thomas Su"},
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi==0.115.2",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy==2.0.34",
    "httpx==0.27.2",
    "pydantic-settings==2.6.1",
    "jinja2==3.1.4",
    "tenacity (>=9.1.4,<10.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"
pytest-asyncio = "0.24.0"
pytest-playwright = "0.5.2"
playwright = "1.55.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
